objects/College__c.object
<CustomObject>
    <fields>
        <fullName>EstablishingDate__c</fullName>
        <label>EstablishingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>